--- a/OOPatterns/OOPatterns.csproj
+++ b/OOPatterns/OOPatterns.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37DFD2D2-7AB9-4A58-8CED-0316CE05F9F2}</ProjectGuid>
+    <ProjectGuid>{4F58D640-0A29-477A-8F8F-177EBA1C9305}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>OOPaterns</RootNamespace>
-    <AssemblyName>OOPaterns</AssemblyName>
+    <RootNamespace>OOPatterns</RootNamespace>
+    <AssemblyName>OOPatterns</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -62,6 +62,31 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Core\InternalObject\Creator.cs" />
+    <Compile Include="Core\InternalObject\ParamObject\IParamObject.cs" />
+    <Compile Include="Core\InternalObject\ParamObject\Method.cs" />
+    <Compile Include="Core\InternalObject\ParamObject\Variable.cs" />
+    <Compile Include="Core\InternalObject\UserType\Class.cs" />
+    <Compile Include="Core\InternalObject\UserType\Interface.cs" />
+    <Compile Include="Core\InternalObject\UserType\IUserType.cs" />
+    <Compile Include="Core\InternalObject\UserType\Structure.cs" />
+    <Compile Include="Core\Utils\Exceptions\OOPatternsException.cs" />
+    <Compile Include="Core\Utils\Log\ILoggable.cs" />
+    <Compile Include="Core\Utils\Log\Logger.cs" />
+    <Compile Include="Core\Utils\Modificators\Access.cs" />
+    <Compile Include="Core\Utils\Modificators\CSharp\CSharpAccess.cs" />
+    <Compile Include="Core\Utils\Name\SystemName.cs" />
+    <Compile Include="Core\Utils\Type\CSharp\CSharpMethodType.cs" />
+    <Compile Include="Core\Utils\Type\CSharp\CSharpType.cs" />
+    <Compile Include="Core\Utils\Type\CSharp\CSharpVariableType.cs" />
+    <Compile Include="Core\Utils\Type\FactoryMethod\CSharpTypeFactory.cs" />
+    <Compile Include="Core\Utils\Type\FactoryMethod\TypeFactory.cs" />
+    <Compile Include="Core\Utils\Type\IMethodType.cs" />
+    <Compile Include="Core\Utils\Type\IType.cs" />
+    <Compile Include="Core\Utils\Type\IVariableType.cs" />
+    <Compile Include="Core\Utils\Type\MethodType.cs" />
+    <Compile Include="Core\Utils\Type\Type.cs" />
+    <Compile Include="Core\Utils\Type\VariableType.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -92,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Core\VisualObject\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
