added base logic for userTypeConfigurationWindow

--- a/OOPatterns/OOPatterns.csproj
+++ b/OOPatterns/OOPatterns.csproj
@@ -54,7 +54,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Core\InternalObject\Core.cs" />
+    <Compile Include="Properties\Resources.ru.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.ru.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\AddParamObjectWindow.xaml.cs">
+      <DependentUpon>AddParamObjectWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\UserTypeConfigurationWindow.xaml.cs">
+      <DependentUpon>UserTypeConfigurationWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Windows\AddParamObjectWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -62,7 +78,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\InternalObject\Creator.cs" />
     <Compile Include="Core\InternalObject\ParamObject\IParamObject.cs" />
     <Compile Include="Core\InternalObject\ParamObject\Method.cs" />
     <Compile Include="Core\InternalObject\ParamObject\Variable.cs" />
@@ -81,10 +96,14 @@
     <Compile Include="Core\Utils\Type\TypeObject.cs" />
     <Compile Include="Core\VisualObject\IVisualObject.cs" />
     <Compile Include="Core\VisualObject\Layer.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\UserTypeConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -101,8 +120,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.ru.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.ru.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -113,5 +136,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\class_ico.png" />
+    <Resource Include="Images\interface_ico.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
