--- a/OOPatterns/OOPatterns.csproj
+++ b/OOPatterns/OOPatterns.csproj
@@ -55,8 +55,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Core\Core.cs" />
+    <Compile Include="Core\Element.cs" />
+    <Compile Include="Core\Helpers\Access.cs" />
+    <Compile Include="Core\Helpers\CanvasHelper.cs" />
+    <Compile Include="Core\Helpers\Enums.cs" />
+    <Compile Include="Core\Helpers\SystemName.cs" />
+    <Compile Include="Core\Helpers\Type.cs" />
+    <Compile Include="Core\Helpers\VisualProperties.cs" />
     <Compile Include="Core\InternalObject\Core.cs" />
-    <Compile Include="Core\VisualObjects\CanvasWorker.cs" />
+    <Compile Include="Core\InternalObject\UserType\UserType.cs" />
+    <Compile Include="Core\Helpers\IUnique.cs" />
+    <Compile Include="Core\Helpers\Unique.cs" />
     <Compile Include="Core\VisualObjects\VisualObject.cs" />
     <Compile Include="Properties\Resources.ru.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -86,18 +96,10 @@
     <Compile Include="Core\InternalObject\ParamObject\Variable.cs" />
     <Compile Include="Core\InternalObject\UserType\Class.cs" />
     <Compile Include="Core\InternalObject\UserType\Interface.cs" />
-    <Compile Include="Core\InternalObject\UserType\IUserType.cs" />
     <Compile Include="Core\InternalObject\UserType\Structure.cs" />
     <Compile Include="Core\Utils\Exceptions\OOPatternsException.cs" />
     <Compile Include="Core\Utils\Log\ILoggable.cs" />
     <Compile Include="Core\Utils\Log\Logger.cs" />
-    <Compile Include="Core\Utils\Modificators\Access.cs" />
-    <Compile Include="Core\Utils\Name\SystemName.cs" />
-    <Compile Include="Core\Utils\Type\IType.cs" />
-    <Compile Include="Core\Utils\Type\Type.cs" />
-    <Compile Include="Core\Utils\Type\TypeInitializer.cs" />
-    <Compile Include="Core\Utils\Type\TypeObject.cs" />
-    <Compile Include="Core\VisualObjects\IVisualObject.cs" />
     <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
