--- a/OOPatterns/OOPatterns.csproj
+++ b/OOPatterns/OOPatterns.csproj
@@ -34,6 +34,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <Win32Resource>
+    </Win32Resource>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -75,9 +79,51 @@
     <Compile Include="Windows\AddParamObjectWindow.xaml.cs">
       <DependentUpon>AddParamObjectWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Controls\ButtonControl.xaml.cs">
+      <DependentUpon>ButtonControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Helpers\AnimationHelper.cs" />
+    <Compile Include="Windows\Helpers\CanvasHelper.cs" />
+    <Compile Include="Windows\Helpers\ContextMenuHelper.cs" />
+    <Compile Include="Windows\Helpers\NavBarHelper.cs" />
+    <Compile Include="Windows\Helpers\ThemeHelper.cs" />
+    <Compile Include="Windows\ParamObjectWindow.xaml.cs">
+      <DependentUpon>ParamObjectWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\UserTypeConfigurationWindow.xaml.cs">
       <DependentUpon>UserTypeConfigurationWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\VariablesInMethodWindow.xaml.cs">
+      <DependentUpon>VariablesInMethodWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Windows\Controls\ButtonControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ParamObjectWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Themes\Brushes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Themes\Brushes_light.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Themes\ComboBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Themes\ContextMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Themes\TextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\AddParamObjectWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -103,7 +149,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\Themes\TextStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\UserTypeConfigurationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\VariablesInMethodWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -141,6 +195,9 @@
   <ItemGroup>
     <Resource Include="Images\class_ico.png" />
     <Resource Include="Images\interface_ico.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
